--- a/backend/package.json
+++ b/backend/package.json
@@ -6,63 +6,85 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
-    "build": "babel src --out-dir dist",
-    "test": "jest --detectOpenHandles",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "lint": "eslint src/ --ext .js,.jsx,.ts,.tsx",
     "lint:fix": "eslint src/ --ext .js,.jsx,.ts,.tsx --fix",
+    "migrate": "sequelize-cli db:migrate",
+    "migrate:undo": "sequelize-cli db:migrate:undo",
+    "migrate:status": "sequelize-cli db:migrate:status",
+    "seed": "sequelize-cli db:seed:all",
+    "seed:undo": "sequelize-cli db:seed:undo:all",
+    "db:create": "sequelize-cli db:create",
+    "db:drop": "sequelize-cli db:drop",
     "db:setup": "node scripts/setup-database.js",
-    "db:migrate": "sequelize-cli db:migrate",
-    "db:seed": "sequelize-cli db:seed:all",
     "db:reset": "sequelize-cli db:migrate:undo:all && npm run db:migrate && npm run db:seed",
+    "backup:full": "node scripts/backup.js full",
+    "backup:schema": "node scripts/backup.js schema",
+    "backup:data": "node scripts/backup.js data",
+    "backup:cleanup": "node scripts/backup.js cleanup",
+    "backup:list": "node scripts/backup.js list",
+    "restore": "node scripts/backup.js restore",
+    "production:setup": "npm run migrate && npm run seed",
+    "production:backup": "npm run backup:full && npm run backup:cleanup",
     "deploy:staging": "echo 'Deploying to staging...'",
     "deploy:production": "echo 'Deploying to production...'"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "morgan": "^1.10.0",
-    "dotenv": "^16.3.1",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "passport": "^0.6.0",
-    "passport-jwt": "^4.0.1",
-    "passport-google-oauth20": "^2.0.0",
-    "passport-local": "^1.0.0",
-    "sequelize": "^6.35.1",
-    "pg": "^8.11.3",
-    "pg-hstore": "^2.3.4",
-    "redis": "^4.6.10",
+    "@sentry/node": "^10.11.0",
+    "@sentry/profiling-node": "^10.11.0",
     "axios": "^1.6.0",
-    "multer": "^1.4.5-lts.1",
-    "sharp": "^0.32.6",
-    "uuid": "^9.0.1",
-    "joi": "^17.11.0",
-    "express-rate-limit": "^7.1.5",
-    "express-validator": "^7.0.1",
-    "winston": "^3.11.0",
-    "elasticsearch": "^16.7.3",
-    "kafkajs": "^2.2.4",
-    "stripe": "^14.5.0",
-    "nodemailer": "^6.9.7",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "cron": "^3.1.6",
+    "crypto-js": "^4.2.0",
+    "dotenv": "^16.3.1",
+    "dotenv-vault": "^1.27.0",
+    "elasticsearch": "^16.7.3",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.5.1",
+    "express-validator": "^7.0.1",
+    "googleapis": "^159.0.0",
+    "helmet": "^7.2.0",
+    "joi": "^17.11.0",
+    "jsonwebtoken": "^9.0.2",
+    "kafkajs": "^2.2.4",
+    "morgan": "^1.10.1",
+    "multer": "^1.4.5-lts.1",
+    "node-cron": "^4.2.1",
+    "nodemailer": "^6.9.7",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
+    "pg": "^8.16.3",
+    "pg-hstore": "^2.3.4",
+    "prom-client": "^15.1.3",
+    "qrcode": "^1.5.4",
+    "redis": "^4.6.10",
+    "sequelize": "^6.35.1",
+    "sharp": "^0.32.6",
+    "speakeasy": "^2.0.0",
+    "sqlite3": "^5.1.7",
+    "stripe": "^14.5.0",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0"
+    "swagger-ui-express": "^5.0.0",
+    "uuid": "^9.0.1",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.23.4",
     "@babel/core": "^7.23.3",
     "@babel/preset-env": "^7.23.3",
-    "nodemon": "^3.0.1",
-    "jest": "^29.7.0",
-    "supertest": "^6.3.3",
     "eslint": "^8.54.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.29.0",
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.1",
     "prettier": "^3.1.0",
-    "sequelize-cli": "^6.6.2"
+    "sequelize-cli": "^6.6.3",
+    "supertest": "^6.3.3"
   },
   "jest": {
     "testEnvironment": "node",
