--- a/frontend-web/package.json
+++ b/frontend-web/package.json
@@ -4,37 +4,39 @@
   "description": "Web frontend for NanoInfluencer MarketPlace",
   "private": true,
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.1",
-    "react-query": "^3.39.3",
-    "axios": "^1.6.0",
-    "react-hook-form": "^7.48.2",
-    "react-hot-toast": "^2.4.1",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
-    "tailwindcss": "^3.3.6",
     "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32",
+    "axios": "^1.12.1",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
-    "recharts": "^2.8.0",
-    "react-select": "^5.8.0",
-    "react-dropzone": "^14.2.3",
-    "react-table": "^7.8.0",
-    "react-paginate": "^8.2.0",
-    "react-modal": "^3.16.1",
-    "react-loading-skeleton": "^3.3.1",
-    "react-infinite-scroll-component": "^6.1.0",
-    "socket.io-client": "^4.7.4",
-    "jwt-decode": "^4.0.0",
-    "zustand": "^4.4.7",
     "framer-motion": "^10.16.16",
+    "jwt-decode": "^4.0.0",
+    "postcss": "^8.4.32",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-helmet-async": "^1.3.0",
-    "web-vitals": "^3.5.0"
+    "react-hook-form": "^7.48.2",
+    "react-hot-toast": "^2.4.1",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-loading-skeleton": "^3.3.1",
+    "react-modal": "^3.16.1",
+    "react-paginate": "^8.2.0",
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.8.1",
+    "react-select": "^5.8.0",
+    "react-table": "^7.8.0",
+    "recharts": "^2.8.0",
+    "socket.io-client": "^4.7.4",
+    "tailwindcss": "^3.3.6",
+    "web-vitals": "^3.5.0",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
-    "react-scripts": "5.0.1",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.10",
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.5.1",
@@ -45,8 +47,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.7",
-    "cypress": "^13.6.0",
-    "@cypress/react": "^8.0.0"
+    "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -58,8 +59,6 @@
     "lint:fix": "eslint src/ --ext .js,.jsx,.ts,.tsx --fix",
     "format": "prettier --write src/",
     "analyze": "npm run build && npx bundle-analyzer build/static/js/*.js",
-    "cypress:open": "cypress open",
-    "cypress:run": "cypress run",
     "deploy:staging": "npm run build && echo 'Deploying web to staging...'",
     "deploy:production": "npm run build && echo 'Deploying web to production...'"
   },
