--- a/frontend-web/package.json
+++ b/frontend-web/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@react-oauth/google": "^0.12.2",
     "autoprefixer": "^10.4.16",
     "axios": "^1.12.1",
     "clsx": "^2.0.0",
