🌐 Add GitHub Pages deployment and demo mode
✅ GitHub Pages Features:
- Automatic deployment workflow with GitHub Actions
- Production-ready build configuration
- Demo mode with sample data for frontend-only preview
- Professional demo banner for live site visitors
- Mobile-optimized responsive design

🚀 Live Website:
- URL: https://ajay9760.github.io/nanoinfluencer-marketplace
- Automatic deployment on every push to main
- CDN-powered for fast global access
- Full UI/UX experience without backend setup

🔧 Demo Mode Implementation:
- Detects GitHub Pages environment automatically
- Provides sample data for campaigns and analytics
- Functional authentication flow with demo users
- Clear indication that it's frontend-only preview
- CTA to run locally for full functionality

📱 Enhanced User Experience:
- Updated README with live website links
- Professional homepage showcasing features
- Informative demo banner with setup instructions
- Seamless fallback when backend unavailable

Ready for public showcase and development!

--- a/frontend-web/package.json
+++ b/frontend-web/package.json
@@ -2,6 +2,7 @@
   "name": "nanoinfluencer-frontend-web",
   "version": "1.0.0",
   "description": "Web frontend for NanoInfluencer MarketPlace",
+  "homepage": "https://ajay9760.github.io/nanoinfluencer-marketplace",
   "private": true,
   "dependencies": {
     "@headlessui/react": "^1.7.17",
